# md-website

./: .gitignore  404.html  Cargo.toml  README.md  blank.txt  build.bat  index.html  main.css  main.js  no_js.html  non_head.js  og-image.py  prism.css  prism.js  robots.txt  search.html  sh.exe.stackdump  sitemap.xml  test.html  tree.csv  tree.txt  uname.exe.stackdump  update.cmd  update_path.py
.github/workflows/: static.yml
css/: bird.css  important.css  main.css
js/: main.js  non_head.js
md_files/: cookies.md  home.md  report bug.md
md_files/about me/: github.md  links.md  resume.md  skills.html  skills.md  timeline.md  timeline.toml
md_files/books/: tick tack toe.md
md_files/desmos/: galton board.md  probability distributions.md  snake game.md
md_files/esolangs/: FORTRAN I.md  desmos interpreter.md  docscript.md
md_files/itch.io/: Casio BASIC scratch.md  TOF calculator.md  bare king.md  crossword genorator.md  guess the number.md  impossible hangman.md  mini city.md  patience not included.md  quantum chess.md
md_files/msc projects/: boids.md
md_files/portfolio/: index.md
md_files/site/: cache.md  credits.md  report bug.md  resources.md  search.md  website stats.md
md_files/web/: portfolio.md  short url.md  superfast re-randomiser.md
mini_js/: main.min.css  main.min.js  prism.min.js
rust-out/: md_website.d.ts  md_website.js  md_website_bg.js  md_website_bg.wasm  md_website_bg.wasm.d.ts
src/: bird.rs  bookmark.html  favorite.txt  lib.rs  search_bar.html  speech.rs  tree.txt  voicelines.rs
sub/: template.html
sub/md_files/: home.html
(+108 files in other folders)
