[package]
name = "md-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys ={ version = "0.3.64"}
wasm-bindgen-futures = "0.4.37"
zune-inflate = "0.2.54"
web-sugars = "1.0.0"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'EventTarget',
    'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Location',
  'History'
]
